2009-09-03  Dave Korn  <dave.korn.cygwin@gmail.com>

	* scripttempl/pe.sc (.text): Add "*(.text.*)" in order to catch
	new GCC hot/cold/unlikely partitions.
	* scripttempl/pep.sc: Likewise.
	* scripttempl/epocpe.sc: Likewise.
	* scripttempl/mcorepe.sc: Likewise.
	* scripttempl/ppcpe.sc: Likewise.

2009-09-01  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* Makefile.am (ldgram.o, ldlex.o, deffilep.o): Supply correct
	source file name for generated files which may be in $(srcdir).
	* Makefile.in: Regenerate.

2009-09-01  H.J. Lu  <hongjiu.lu@intel.com>

	* ldver.c (ldversion): Change to "Copyright 2009".

2009-09-01  Jie Zhang  <jie.zhang@analog.com>

	* scripttempl/elf.sc: Add ${USER_LABEL_PREFIX} to _start, etext,
	_stack and __bss_start.
	* emulparams/bfin.sh (ENTRY): Remove.

2009-08-30  Alan Modra  <amodra@bigpond.net.au>

	PR ld/10569
	* ldexp.c (fold_name <MAXPAGESIZE>): Return config.maxpagesize.
	(fold_name <COMMONPAGESIZE>): Similarly.
	* ldlang.c (output_target): Make global.
	* ldlang.h (output_target): Declare.
	* ldmain.c (main): Set config.maxpagesize from bfd_emul_get_maxpagesize.
	Similarly for config.commonpagesize.
	* ldemul.c (set_output_arch_default): Call bfd_emul_set_maxpagesize
	and bfd_emul_set_commonpagesize.
	* emultempl/elf32.em (gld${EMULATION_NAME}_handle_option): Don't call
	bfd_emul_set_maxpagesize or bfd_emul_set_commonpagesize here.

2009-08-29  Martin Thuresson  <martin@mtme.org>

	* ldexp.c (exp_intop, exp_bigintop, exp_relop, exp_binop)
	(exp_trinop, exp_unop, exp_nameop, exp_assop): Rename variable new
	to new_e.
	* ldfile.c (ldfile_add_library_path): Rename variable new to
	new_dirs. (ldfile_add_arch): Rename variable new to new_arch.
	* ldlang.c (new_statement, lang_final, lang_add_wild)
	(lang_target, lang_add_fill, lang_add_data, lang_add_assignment)
	(lang_add_insert): Rename variable new to new_stmt. (new_afile):
	Added missing cast. (lang_memory_region_lookup): Rename variable